--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
-  "author": "Kshitij",
+  "author": "Ritesh",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
